# ChangeLog for dev-util/bzr
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/bzr/ChangeLog,v 1.88 2009/03/25 00:32:51 pva Exp $

*bzr-1.13.1 (25 Mar 2009)

  25 Mar 2009; Peter Volkov <pva@gentoo.org> -bzr-1.13.ebuild,
  +bzr-1.13.1.ebuild:
  Version bump.

  22 Mar 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml:
  Removing hawking as a maintainer since he was retired.

*bzr-1.13 (17 Mar 2009)

  17 Mar 2009; Peter Volkov <pva@gentoo.org> -bzr-1.13_rc1.ebuild,
  +bzr-1.13.ebuild:
  Version bump.

*bzr-1.13_rc1 (15 Mar 2009)

  15 Mar 2009; Peter Volkov <pva@gentoo.org> +bzr-1.13_rc1.ebuild:
  Version bump.

  20 Feb 2009; Christian Faulhammer <fauli@gentoo.org> bzr-1.12.ebuild:
  make USE=sftp default with EAPI=1

  20 Feb 2009; Christian Faulhammer <fauli@gentoo.org> bzr-1.12.ebuild:
  make Python 2.5 first choice so people get that pulled in in every case

*bzr-1.12 (14 Feb 2009)

  14 Feb 2009; Christian Faulhammer <fauli@gentoo.org> -bzr-1.12_rc1.ebuild,
  +bzr-1.12.ebuild:
  version bump

*bzr-1.12_rc1 (10 Feb 2009)

  10 Feb 2009; Peter Volkov <pva@gentoo.org> +bzr-1.12_rc1.ebuild:
  Version bump. Release candidates will be added hard masked.

  08 Feb 2009; Christian Faulhammer <fauli@gentoo.org> metadata.xml:
  add myself as maintainer

*bzr-1.11 (20 Jan 2009)

  20 Jan 2009; Peter Volkov <pva@gentoo.org> -bzr-1.11_rc1.ebuild,
  +bzr-1.11.ebuild:
  Version bump.

*bzr-1.11_rc1 (10 Jan 2009)

  10 Jan 2009; Peter Volkov <pva@gentoo.org> -bzr-1.5.ebuild,
  -bzr-1.6.1.ebuild, -bzr-1.7.1.ebuild, -bzr-1.8.ebuild, -bzr-1.8-r1.ebuild,
  +bzr-1.11_rc1.ebuild:
  Version bump. Remove old.

  03 Jan 2009; nixnut <nixnut@gentoo.org> bzr-1.9.ebuild:
  ppc stable #252656

  31 Dec 2008; Raúl Porcel <armin76@gentoo.org> bzr-1.9.ebuild:
  x86 stable wrt #252656

  31 Dec 2008; Friedrich Oslage <bluebird@gentoo.org> bzr-1.9.ebuild:
  Stable on sparc, bug #252656
