@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/bzr
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/bzr/ChangeLog,v 1.88 2009/03/25 00:32:51 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/bzr/ChangeLog,v 1.89 2009/04/11 15:58:56 pva Exp $
+
+*bzr-1.14_rc1 (11 Apr 2009)
+
+  11 Apr 2009; Peter Volkov <pva@gentoo.org> bzr-1.13.1.ebuild,
+  +bzr-1.14_rc1.ebuild:
+  Version bump.
 
 *bzr-1.13.1 (25 Mar 2009)
 
